syntax = "proto3";
package path;

option go_package = "github.com/buildwithgrove/path/observation";

message QoSDetails {
  optional JsonRpcRequest jsonrpc_request=1;
  optional JsonRpcResponse jsonrpc_response=2;
}

message JsonRpcRequest {
  string id=1;
  string method=2;
}

message JsonRpcResponse {
  string id=1;
  string result=2;
  optional JsonRpcResponseError err=3;
}

message JsonRpcResponseError {
  int64 code=1;
  string message=2;
}
