package cosmos

import (
	qosobservations "github.com/buildwithgrove/path/observation/qos"
	sharedtypes "github.com/pokt-network/poktroll/x/shared/types"
)

// convertToProtoRPCType converts sharedtypes.RPCType to the proto equivalent
func convertToProtoRPCType(rpcType sharedtypes.RPCType) qosobservations.RPCType {
	switch rpcType {
	case sharedtypes.RPCType_JSON_RPC:
		return qosobservations.RPCType_RPC_TYPE_JSONRPC
	case sharedtypes.RPCType_REST:
		return qosobservations.RPCType_RPC_TYPE_REST
	case sharedtypes.RPCType_COMET_BFT:
		// Map CometBFT to either JSONRPC or REST based on context
		// For now, default to JSONRPC since CometBFT often uses JSON-RPC over HTTP
		return qosobservations.RPCType_RPC_TYPE_JSONRPC
	default:
		return qosobservations.RPCType_RPC_TYPE_UNSPECIFIED
	}
}

// convertBackendServiceType converts sharedtypes.RPCType to BackendServiceType
func convertBackendServiceType(rpcType sharedtypes.RPCType) qosobservations.BackendServiceType {
	switch rpcType {
	case sharedtypes.RPCType_JSON_RPC:
		return qosobservations.BackendServiceType_BACKEND_SERVICE_TYPE_JSONRPC
	case sharedtypes.RPCType_REST:
		return qosobservations.BackendServiceType_BACKEND_SERVICE_TYPE_REST
	case sharedtypes.RPCType_COMET_BFT:
		return qosobservations.BackendServiceType_BACKEND_SERVICE_TYPE_COMETBFT
	default:
		return qosobservations.BackendServiceType_BACKEND_SERVICE_TYPE_UNSPECIFIED
	}
}

// Common API paths for response routing
const (
	apiPathHealthCheck = "/health"
	apiPathStatus      = "/status"
)

// httpResponse represents an HTTP response structure
type httpResponse struct {
	responsePayload []byte
	httpStatusCode  int
}

// response interface that all response types must implement
// This interface should match what's expected by the existing response system
type response interface {
	GetHTTPResponse() httpResponse
	GetObservation() qosobservations.CosmosSDKEndpointObservation
}

// Placeholder response types that need to be implemented properly
// These should match the existing response system in your codebase

type responseGeneric struct {
	logger          interface{} // Use actual logger type
	jsonRPCResponse interface{} // Use actual JSONRPC response type
	rawData         []byte
	isRestResponse  bool
}

func (r responseGeneric) GetHTTPResponse() httpResponse {
	// Implementation should match existing response system
	return httpResponse{
		responsePayload: r.rawData,
		httpStatusCode:  200, // Default, should be determined from actual response
	}
}

func (r responseGeneric) GetObservation() qosobservations.CosmosSDKEndpointObservation {
	// Implementation should match existing response system
	return qosobservations.CosmosSDKEndpointObservation{
		// Populate based on actual response data
	}
}

type responseToHealth struct {
	// Implementation should match existing response system
}

func (r responseToHealth) GetHTTPResponse() httpResponse {
	// Implementation should match existing response system
	return httpResponse{}
}

func (r responseToHealth) GetObservation() qosobservations.CosmosSDKEndpointObservation {
	// Implementation should match existing response system
	return qosobservations.CosmosSDKEndpointObservation{}
}

type responseToStatus struct {
	// Implementation should match existing response system
}

func (r responseToStatus) GetHTTPResponse() httpResponse {
	// Implementation should match existing response system
	return httpResponse{}
}

func (r responseToStatus) GetObservation() qosobservations.CosmosSDKEndpointObservation {
	// Implementation should match existing response system
	return qosobservations.CosmosSDKEndpointObservation{}
}

// Response unmarshaller function types
func responseUnmarshallerHealth(logger interface{}, jsonrpcResp interface{}) (response, error) {
	// Implementation should match existing response system
	return &responseToHealth{}, nil
}

func responseUnmarshallerStatus(logger interface{}, jsonrpcResp interface{}) (response, error) {
	// Implementation should match existing response system
	return &responseToStatus{}, nil
}

func responseUnmarshallerGeneric(logger interface{}, jsonrpcResp interface{}, data []byte, isJSONRPC bool) (response, error) {
	// Implementation should match existing response system
	return &responseGeneric{
		logger:         logger,
		rawData:        data,
		isRestResponse: !isJSONRPC,
	}, nil
}
